# cpp_api

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
scripts/: watch.sh
src/: main.cpp
src/config/: config.hpp
src/controllers/: AuthController.hpp  BaseController.hpp  ExportController.hpp  FileController.hpp  HelloController.hpp  I18nController.hpp  TestController.hpp  UserController.hpp  UtilsController.hpp  ValidationController.hpp  WebSocketController.hpp
src/database/: DatabaseManager.hpp  MigrationManager.hpp
src/database/migrations/: CreateUsersTable.hpp
src/events/: EventManager.hpp  logEvent.hpp
src/export/: DataExporter.hpp
src/files/: FileHandler.hpp
src/i18n/: I18n.hpp
src/middlewares/: JWTMiddleware.hpp  NoMiddleware.hpp
src/models/: User.hpp
src/redis/: RedisManager.hpp
src/routes/: AuthRouter.hpp  ExportRouter.hpp  FileRouter.hpp  HelloRouter.hpp  I18nRouter.hpp  RouteManager.hpp  Router.hpp  TestRouter.hpp  UserRouter.hpp  UtilsRouter.hpp  ValidationRouter.hpp  WebSocketRouter.hpp
src/testing/: TestFramework.hpp
src/utils/: DateUtils.hpp  HashUtils.hpp  JsonUtils.hpp  StringUtils.hpp
src/validation/: Validator.hpp
src/websocket/: WebSocketManager.hpp
